[package]
name = "clib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
textwrap = "0.16.0"
ratatui = "0.21.0"
tui-input = {version = "0.7.1", features = ["crossterm", "serde"]}
rmp-serde = "1.1.1"
serde = { version = "1.0.171", features = ["derive"]}
